# ModelPulse-CLI

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  README.zh-TW.md  pyproject.toml
src/modelpulse/: __init__.py  cli.py  engine.py  models.py  tui.py
tests/: test_modelpulse.py
